feat: build main functionality

--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -11,11 +12,28 @@
   <link rel="stylesheet" href="style.css">
   <title>Books-shop</title>
   <script src="./mainPage.js"></script>
+  <script src="./handlers.js"></script>
 </head>
+
 <body onload="start();">
-  <div>Test</div>
-  <i class="fa-regular fa-cart-shopping" style="font-size: 50px ;color: red"></i>
-  <div class="" id="catalog">
+  <div id="root">
+    <header>
+      <h1>Header</h1>
+    </header>
+    <!-- <main>
+      <section class="" id="catalog" >
+      </section>
+      <section>
+        <div class="top-icons">
+          <i class="fa-regular fa-cart-shopping" style="font-size: 50px ;color: red"></i>
+          <i class="fa-solid fa-angle-down"></i>
+        </div>
+        <div class="bag" id="bag">
+        </div>
+      </section>
+    </main> -->
   </div>
+
 </body>
+
 </html>
