--- a/index.html
+++ b/index.html
@@ -1,27 +1,43 @@
 <!DOCTYPE html>
 <html lang="en">
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link
+      rel="stylesheet"
+      href="https://necolas.github.io/normalize.css/8.0.1/normalize.css"
+    />
+    <link rel="stylesheet" href="./assets/fontawesome/css/fontawesome.css" />
+    <link rel="stylesheet" href="./assets/fontawesome/css/solid.css" />
+    <link rel="stylesheet" href="./assets/fontawesome/css/brands.css" />
+    <link rel="stylesheet" href="style.css" />
+    <title>Books-shop</title>
+    <script src="./mainPage.js"></script>
+    <script src="./handlers.js"></script>
+  </head>
 
-<head>
-  <meta charset="UTF-8">
-  <meta http-equiv="X-UA-Compatible" content="IE=edge">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <link rel="stylesheet" href="https://necolas.github.io/normalize.css/8.0.1/normalize.css">
-  <link rel="stylesheet" href="./assets/fontawesome/css/fontawesome.css">
-  <link rel="stylesheet" href="./assets/fontawesome/css/solid.css">
-  <link rel="stylesheet" href="./assets/fontawesome/css/brands.css">
-  <link rel="stylesheet" href="style.css">
-  <title>Books-shop</title>
-  <script src="./mainPage.js"></script>
-  <script src="./handlers.js"></script>
-</head>
-
-<body onload="start();">
-  <div id="root">
-    <header>
-      <h1>Header</h1>
-    </header>
-  </div>
-
-</body>
-
+  <body onload="start();">
+    <div id="root">
+      <header>
+        <div id="head-image">
+          Photo by&nbsp;
+          <a
+            target="_blank"
+            rel="noreferrer"
+            href="https://unsplash.com/ja/@fredmarriage?utm_source=unsplash&utm_medium=referral&utm_content=creditCopyText"
+            >freddie marriage</a
+          >
+          &nbsp;on&nbsp;
+          <a
+            target="_blank"
+            rel="noreferrer"
+            href="https://unsplash.com/s/photos/bookstore?utm_source=unsplash&utm_medium=referral&utm_content=creditCopyText"
+            >Unsplash</a
+          >
+        </div>
+        <h1>Welcome to amazing book shop!</h1>
+      </header>
+    </div>
+  </body>
 </html>
