feat: show total amount on form-page

--- a/form/index.html
+++ b/form/index.html
@@ -40,8 +40,8 @@
         <input name="flat" />
       </label>
       <fieldset>
-        <legend id="total">Payment</legend>
-        <div>Total amount:</div>
+        <legend>Payment</legend>
+        <div id="total">Total amount: $</div>
         <label>
           <input name="payment" type="radio" />
           Cash
