fix: move creating header to JS

--- a/index.html
+++ b/index.html
@@ -13,31 +13,12 @@
     <link rel="stylesheet" href="./assets/fontawesome/css/brands.css" />
     <link rel="stylesheet" href="style.css" />
     <title>Books-shop</title>
-    <script src="./mainPage.js"></script>
-    <script src="./handlers.js"></script>
+    <script src="./scripts/main.js"></script>
+    <script src="./scripts/handlers.js"></script>
+    <script src="./scripts/header.js"></script>
   </head>
 
   <body onload="start();">
-    <div id="root">
-      <header>
-        <div id="head-image">
-          Photo by&nbsp;
-          <a
-            target="_blank"
-            rel="noreferrer"
-            href="https://unsplash.com/ja/@fredmarriage?utm_source=unsplash&utm_medium=referral&utm_content=creditCopyText"
-            >freddie marriage</a
-          >
-          &nbsp;on&nbsp;
-          <a
-            target="_blank"
-            rel="noreferrer"
-            href="https://unsplash.com/s/photos/bookstore?utm_source=unsplash&utm_medium=referral&utm_content=creditCopyText"
-            >Unsplash</a
-          >
-        </div>
-        <h1>Welcome to amazing book shop!</h1>
-      </header>
-    </div>
+    <div id="root"></div>
   </body>
 </html>
