--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@
     <script src="./scripts/main.js"></script>
     <script src="./scripts/handlers.js"></script>
     <script src="./scripts/header.js"></script>
+    <script src="./scripts/footer.js"></script>
   </head>
 
   <body onload="start();">
