fix(form): change base

--- a/form/index.html
+++ b/form/index.html
@@ -16,6 +16,7 @@
     <script src="./script.js"></script>
     <script src="../header/header.js"></script>
     <script src="../footer/footer.js"></script>
+    <base href=".." />
   </head>
   <body onload="start()">
     <script>
