fix(form): change base

--- a/form/index.html
+++ b/form/index.html
@@ -7,7 +7,7 @@
     <title>Books-shop</title>
     <link
       rel="shortcut icon"
-      href="../assets/icons/book.ico"
+      href="./assets/icons/book.ico"
       type="image/x-icon"
     />
     <link rel="stylesheet" href="./formStyle.css" />
@@ -16,6 +16,7 @@
     <script src="./script.js"></script>
     <script src="../header/header.js"></script>
     <script src="../footer/footer.js"></script>
+    <base href=".." />
   </head>
   <body onload="start()">
     <script>
