fix(form): change base

--- a/form/index.html
+++ b/form/index.html
@@ -7,7 +7,7 @@
     <title>Books-shop</title>
     <link
       rel="shortcut icon"
-      href="../assets/icons/book.ico"
+      href="./assets/icons/book.ico"
       type="image/x-icon"
     />
     <link rel="stylesheet" href="./formStyle.css" />
